[gd_scene load_steps=56 format=3 uid="uid://7xb8qisie2k1"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_flcms"]
[ext_resource type="Texture2D" uid="uid://b2rvvjv20prg7" path="res://sprites/menu/menu rpg1.png" id="2_2cldj"]
[ext_resource type="Texture2D" uid="uid://gnidbk25b8w1" path="res://sprites/menu/menu rpg2.png" id="3_6orqy"]
[ext_resource type="Texture2D" uid="uid://bq1i6fjuqkc7n" path="res://sprites/ui/menu/play_button.webp" id="3_nd371"]
[ext_resource type="Texture2D" uid="uid://ct5phgivi2n54" path="res://sprites/menu/menu rpg3.png" id="4_4u8ts"]
[ext_resource type="Texture2D" uid="uid://ddc8bm6odvyvg" path="res://sprites/ui/menu/exit_button.webp" id="4_65ocu"]
[ext_resource type="Texture2D" uid="uid://c6qqxl2wqgxrp" path="res://sprites/menu/menu rpg4.png" id="5_1jjoy"]
[ext_resource type="Texture2D" uid="uid://c5fhd74hhyg7u" path="res://sprites/menu/menu rpg5.png" id="6_0l2br"]
[ext_resource type="Texture2D" uid="uid://bok5gkuwatb80" path="res://sprites/menu/menu rpg6.png" id="7_mghct"]
[ext_resource type="Texture2D" uid="uid://cbjilhx43jufj" path="res://sprites/menu/menu rpg7.png" id="8_7o5ie"]
[ext_resource type="Texture2D" uid="uid://b7rhq3iqnj7xl" path="res://sprites/menu/menu rpg8.png" id="9_synhn"]
[ext_resource type="Texture2D" uid="uid://dauuakjyawpn2" path="res://sprites/menu/menu rpg9.png" id="10_75ewq"]
[ext_resource type="Texture2D" uid="uid://dyrktyr1jm26k" path="res://sprites/menu/menu rpg10.png" id="11_mtvm4"]
[ext_resource type="Texture2D" uid="uid://cq2d0hdwmdbio" path="res://sprites/menu/menu rpg11.png" id="12_vfnpt"]
[ext_resource type="Texture2D" uid="uid://gjvqmpm2u51" path="res://sprites/menu/menu rpg12.png" id="13_47ugs"]
[ext_resource type="Texture2D" uid="uid://csua0rhtse5w6" path="res://sprites/menu/menu rpg13.png" id="14_x0q80"]
[ext_resource type="Texture2D" uid="uid://bd46di82kpo78" path="res://sprites/menu/menu rpg14.png" id="15_2jt3r"]
[ext_resource type="Texture2D" uid="uid://cg30q6bbypxbn" path="res://sprites/menu/menu rpg15.png" id="16_whxfc"]
[ext_resource type="Texture2D" uid="uid://fhrnitnpayq7" path="res://sprites/menu/menu rpg16.png" id="17_237qk"]
[ext_resource type="Texture2D" uid="uid://cq442n3tpq31v" path="res://sprites/menu/menu rpg17.png" id="18_fxbv5"]
[ext_resource type="Texture2D" uid="uid://blag75b5qahk2" path="res://sprites/menu/menu rpg18.png" id="19_djnj5"]
[ext_resource type="Texture2D" uid="uid://doh02p6h2oyuy" path="res://sprites/menu/menu rpg19.png" id="20_fxouu"]
[ext_resource type="Texture2D" uid="uid://c26dgv44vo5hq" path="res://sprites/menu/menu rpg20.png" id="21_ickwp"]
[ext_resource type="Texture2D" uid="uid://ssyox64jbaxd" path="res://sprites/menu/menu rpg21.png" id="22_0f5ac"]
[ext_resource type="Texture2D" uid="uid://cim1n4pojhve2" path="res://sprites/menu/menu rpg22.png" id="23_u6ff4"]
[ext_resource type="Texture2D" uid="uid://tuaoqgb2n00y" path="res://sprites/menu/menu rpg23.png" id="24_2wst7"]
[ext_resource type="Texture2D" uid="uid://j02lgsei2857" path="res://sprites/menu/menu rpg24.png" id="25_1wh8l"]
[ext_resource type="Texture2D" uid="uid://c33vk2v3742px" path="res://sprites/menu/menu rpg25.png" id="26_apjd0"]
[ext_resource type="Texture2D" uid="uid://bufxasw1dvl3y" path="res://sprites/menu/menu rpg26.png" id="27_b3nja"]
[ext_resource type="Texture2D" uid="uid://b12etqqkln357" path="res://sprites/menu/menu rpg27.png" id="28_bax0l"]
[ext_resource type="Texture2D" uid="uid://1pv2y8rv8o3t" path="res://sprites/menu/menu rpg28.png" id="29_t4be1"]
[ext_resource type="Texture2D" uid="uid://cwblqc4e1o1gc" path="res://sprites/menu/menu rpg29.png" id="30_3iywp"]
[ext_resource type="Texture2D" uid="uid://di0moaet2gne2" path="res://sprites/menu/menu rpg30.png" id="31_jl7xt"]
[ext_resource type="Texture2D" uid="uid://djv8muuenyntc" path="res://sprites/menu/menu rpg31.png" id="32_50i7t"]
[ext_resource type="Texture2D" uid="uid://djgwgom8237er" path="res://sprites/menu/menu rpg32.png" id="33_1a254"]
[ext_resource type="Texture2D" uid="uid://cksdog3h04ehq" path="res://sprites/menu/menu rpg33.png" id="34_y3b28"]
[ext_resource type="Texture2D" uid="uid://cdoyes6guh2r1" path="res://sprites/menu/menu rpg34.png" id="35_hpa7q"]
[ext_resource type="Texture2D" uid="uid://bppx58fxm5ogh" path="res://sprites/menu/menu rpg35.png" id="36_kf887"]
[ext_resource type="Texture2D" uid="uid://b32j1ax6kvytw" path="res://sprites/ui/menu/logo_bullet.webp" id="37_qiues"]
[ext_resource type="Theme" uid="uid://cjoyqre1lp47" path="res://assets/themes/buttons.tres" id="38_koc4b"]
[ext_resource type="Texture2D" uid="uid://ww4m6gg06lt4" path="res://sprites/ui/menu/control_button.webp" id="39_248mq"]
[ext_resource type="AudioStream" uid="uid://bgxjjvu20e8ai" path="res://assets/fx/musics/menuMain.mp3" id="41_o2sml"]
[ext_resource type="AudioStream" uid="uid://leo45x77sf2n" path="res://assets/fx/effects/buttonEffect.mp3" id="42_4bb3h"]
[ext_resource type="AudioStream" uid="uid://dneutqaxaf50y" path="res://assets/fx/effects/changeScene.mp3" id="43_tdf6v"]
[ext_resource type="PackedScene" uid="uid://cn2sqjss54663" path="res://scenes/ui/control_overlay.tscn" id="44_p7tby"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2p16b"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2cldj")
}, {
"duration": 1.0,
"texture": ExtResource("3_6orqy")
}, {
"duration": 1.0,
"texture": ExtResource("4_4u8ts")
}, {
"duration": 1.0,
"texture": ExtResource("5_1jjoy")
}, {
"duration": 1.0,
"texture": ExtResource("6_0l2br")
}, {
"duration": 1.0,
"texture": ExtResource("7_mghct")
}, {
"duration": 1.0,
"texture": ExtResource("8_7o5ie")
}, {
"duration": 1.0,
"texture": ExtResource("9_synhn")
}, {
"duration": 1.0,
"texture": ExtResource("10_75ewq")
}, {
"duration": 1.0,
"texture": ExtResource("11_mtvm4")
}, {
"duration": 1.0,
"texture": ExtResource("12_vfnpt")
}, {
"duration": 1.0,
"texture": ExtResource("13_47ugs")
}, {
"duration": 1.0,
"texture": ExtResource("14_x0q80")
}, {
"duration": 1.0,
"texture": ExtResource("15_2jt3r")
}, {
"duration": 1.0,
"texture": ExtResource("16_whxfc")
}, {
"duration": 1.0,
"texture": ExtResource("17_237qk")
}, {
"duration": 1.0,
"texture": ExtResource("18_fxbv5")
}, {
"duration": 1.0,
"texture": ExtResource("19_djnj5")
}, {
"duration": 1.0,
"texture": ExtResource("20_fxouu")
}, {
"duration": 1.0,
"texture": ExtResource("21_ickwp")
}, {
"duration": 1.0,
"texture": ExtResource("22_0f5ac")
}, {
"duration": 1.0,
"texture": ExtResource("23_u6ff4")
}, {
"duration": 1.0,
"texture": ExtResource("24_2wst7")
}, {
"duration": 1.0,
"texture": ExtResource("25_1wh8l")
}, {
"duration": 1.0,
"texture": ExtResource("26_apjd0")
}, {
"duration": 1.0,
"texture": ExtResource("27_b3nja")
}, {
"duration": 1.0,
"texture": ExtResource("28_bax0l")
}, {
"duration": 1.0,
"texture": ExtResource("29_t4be1")
}, {
"duration": 1.0,
"texture": ExtResource("30_3iywp")
}, {
"duration": 1.0,
"texture": ExtResource("31_jl7xt")
}, {
"duration": 1.0,
"texture": ExtResource("32_50i7t")
}, {
"duration": 1.0,
"texture": ExtResource("33_1a254")
}, {
"duration": 1.0,
"texture": ExtResource("34_y3b28")
}, {
"duration": 1.0,
"texture": ExtResource("35_hpa7q")
}, {
"duration": 1.0,
"texture": ExtResource("36_kf887")
}],
"loop": true,
"name": &"menu-anim",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwgg0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_23tjf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dmvbs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_664yq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n6to5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_73i01"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hg8r7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0gcxr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n2cji"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flcms")

[node name="bground" type="AnimatedSprite2D" parent="."]
position = Vector2(569, 325)
scale = Vector2(3.03684, 2.78333)
sprite_frames = SubResource("SpriteFrames_2p16b")
animation = &"menu-anim"
frame_progress = 0.290981

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(569, 103)
scale = Vector2(0.452001, 0.43276)
texture = ExtResource("37_qiues")

[node name="menu" type="Control" parent="."]
process_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="play" type="Button" parent="menu"]
process_mode = 3
layout_mode = 2
offset_left = 489.0
offset_top = 349.0
offset_right = 669.0
offset_bottom = 421.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("38_koc4b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bwgg0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_23tjf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dmvbs")
icon = ExtResource("3_nd371")
icon_alignment = 1
expand_icon = true

[node name="sair" type="Button" parent="menu"]
process_mode = 3
layout_mode = 2
offset_left = 516.0
offset_top = 535.0
offset_right = 648.0
offset_bottom = 578.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("38_koc4b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_664yq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n6to5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_73i01")
icon = ExtResource("4_65ocu")
icon_alignment = 1
expand_icon = true

[node name="opções" type="Button" parent="menu"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 511.0
offset_top = 430.0
offset_right = 596.0
offset_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("38_koc4b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hg8r7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0gcxr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n2cji")
text = "options"
alignment = 0
icon_alignment = 1
expand_icon = true

[node name="opções2" type="Button" parent="menu"]
process_mode = 3
layout_mode = 0
offset_left = 445.0
offset_top = 480.0
offset_right = 715.0
offset_bottom = 539.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("38_koc4b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hg8r7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0gcxr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n2cji")
icon = ExtResource("39_248mq")
alignment = 0
icon_alignment = 1
expand_icon = true

[node name="port" type="Button" parent="menu"]
process_mode = 3
layout_mode = 0
offset_left = 21.0
offset_top = 357.0
offset_right = 107.0
offset_bottom = 405.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("38_koc4b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hg8r7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0gcxr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n2cji")
text = "PORT"
alignment = 0
icon_alignment = 1
expand_icon = true

[node name="eng" type="Button" parent="menu"]
process_mode = 3
layout_mode = 0
offset_left = 21.0
offset_top = 401.0
offset_right = 107.0
offset_bottom = 449.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("38_koc4b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hg8r7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0gcxr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n2cji")
text = "ENG"
alignment = 0
icon_alignment = 1
expand_icon = true

[node name="esp" type="Button" parent="menu"]
process_mode = 3
layout_mode = 0
offset_left = 20.0
offset_top = 445.0
offset_right = 106.0
offset_bottom = 493.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("38_koc4b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hg8r7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0gcxr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n2cji")
text = "ESP"
alignment = 0
icon_alignment = 1
expand_icon = true

[node name="menuAmbient" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("41_o2sml")
volume_db = -10.0
autoplay = true

[node name="buttonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("42_4bb3h")

[node name="sceneMorph" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("43_tdf6v")

[node name="sceneChangingTimer" type="Timer" parent="."]

[node name="controlOverlay" parent="." instance=ExtResource("44_p7tby")]
visible = false

[connection signal="pressed" from="menu/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="menu/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="menu/opções" to="." method="_on_opções_pressed"]
[connection signal="pressed" from="menu/opções2" to="." method="_on_opções_pressed"]
[connection signal="pressed" from="menu/port" to="." method="_on_port_pressed"]
[connection signal="pressed" from="menu/eng" to="." method="_on_eng_pressed"]
[connection signal="pressed" from="menu/esp" to="." method="_on_esp_pressed"]
[connection signal="timeout" from="sceneChangingTimer" to="." method="_on_scene_changing_timer_timeout"]
